--- a/style.css
+++ b/style.css
@@ -5,6 +5,25 @@ body{
 }
 .title{
     text-align: center;
-    font-size: 40;
+    font-size: 2em;
     text-shadow: #ba7f00;
+}
+
+.sentence{
+    font-size: 0.5em; 
+    padding: 0.5em; 
+    width: 20em;
+  }
+.maxWordCount{
+  font-size: 0.5em; 
+  padding: 0.5em; 
+  width: 10em;
+}
+
+.errorMessage{
+    color: firebrick;
+}
+
+.hideWords{
+    text-align: center;
 }
